Update to Bootstrap 4.4.
Fix links to other sections on the self-cert page.

Add link to self-cert page from IPP Everywhere page.

Add logo to printers and self-cert pages.

--- a/ipp/everywhere.html
+++ b/ipp/everywhere.html
@@ -9,6 +9,7 @@ layout: bare
     <p>A PWG standard that allows personal computers and mobile devices to find and print to networked and USB printers without using vendor-specific software.</p>
     <ul class="nav nav-pills">
       <li class="nav-item" role="presentation"><a class="nav-link" href="/printers">Find Printers</a></li>
+      <li class="nav-item" role="presentation"><a class="nav-link" href="/ippeveselfcert">Printer Self-Certification</a></li>
       <li class="nav-item" role="presentation"><a class="nav-link" href="evefaq.html">Frequently Asked Questions</a></li>
     </ul>
   </div>
