--- a/printers/index.html
+++ b/printers/index.html
@@ -5,7 +5,7 @@ layout: bare
 
 <div class="row pwg-panel pwg-base">
   <div class="col-md-12 col-sm-12">
-    <h1>IPP Everywhere™ Printers</h1>
+    <h1><img class="pwg-logo-xs hidden-sm" src="/ipp/ipp-everywhere-320@2x.png">IPP Everywhere™ Printers</h1>
   </div>
 </div>
 <div class="row pwg-panel" style="height: 100%;">
