--- a/ipp/index.html
+++ b/ipp/index.html
@@ -28,7 +28,7 @@ layout: bare
 
     <p>Co-Chairs: <a href="mailto:blueroofmusic@gmail.com">Ira McDonald</a>,
     <a href="mailto:ptykodi@tykodi.com">Paul Tykodi</a><br>
-    Secretary: <a href="mailto:msweet@apple.com">Michael Sweet</a></p>
+    Secretary: <a href="mailto:msweet@lakesiderobotics.ca">Michael Sweet</a></p>
 
     <h3>How to Participate</h3>
 
