--- a/ipp/index.html
+++ b/ipp/index.html
@@ -134,13 +134,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20200130-rev.pdf">Redlined</a>
     (Stable Draft - Last Updated January 30, 2020)</p>
 
-    <h3>Registration Drafts</h3>
-
-    <p>IPP Label Printing Extensions v1.0 (LABEL):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200130.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipplabel10-20200130-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated January 30, 2020)</p>
+    <!-- <h3>Registration Drafts</h3> -->
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
@@ -234,6 +228,7 @@ layout: bare
 
     <p><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippgupa-20171214.pdf">IPP Get-User-Printer-Attributes</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/wp-job-password-repertoire-20160101.pdf">IPP Job Password Repertoire</a>
+    <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ipplabel10-20200213.pdf">IPP Label Printing Extensions v1.0</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ipppreset-20171214.pdf">IPP Presets</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippprivacy10-20180412.pdf">IPP Privacy Attributes v1.0 (PRIVACY)</a>
     </p>
