--- a/chair/participating.html
+++ b/chair/participating.html
@@ -19,6 +19,7 @@ layout: bare
     <h2>The Standards Process</h2>
     <p>The Printer Working Group maintains an open standards development environment and welcomes the participation of all who are interested in printing and imaging technologies, standards, and solutions. All that is required to participate is to be polite and agree to abide by the terms of the <a href="membership_docs/pwg-ip-policy.pdf">PWG Policy on Intellectual Property and Confidentiality</a>, which roughly amounts to "anything you share in a PWG meeting, on the PWG FTP server, or on the PWG mailing lists can be included in a PWG standard or informational document."</p>
     <p>You can participate in person or virtually via phone and/or email.  See the <a href="../mailman/listinfo">workgroup mailing lists</a> to ask questions, contribute, or learn when the next meeting is scheduled for a particular workgroup.</p>
+    <h3>How a Document is Published</h3>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-0">
@@ -36,5 +37,15 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2>Registering New Items</h2>
     <p>Many PWG standards offer a registry for attributes (aka elements and properties), operations, and values that third parties define for their particular usage. Send such registrations to the corresponding workgroup mailing list.</p>
+  </div>
+</div>
+<div class="row pwg-panel pwg-alt-2">
+  <div class="col-md-12 col-sm-12">
+    <h2>Updating Existing Documents</h2>
+    <p>The PWG regularly updates existing published standards and other documents through the errata process.</p>
+    <figure class="figure">
+      <div class="text-center"><img src="file-naming.png" class="figure-img img-fluid w-75" alt="File naming conventions."></div>
+      <figcaption class="figure-caption text-center">Figure N - The PWG File Naming Convention</figcaption>
+    </figure>
   </div>
 </div>
