--- a/ippeveselfcert/index.html
+++ b/ippeveselfcert/index.html
@@ -66,8 +66,8 @@ a.nav-link.active {
     <p>First download and install the current self-certification tools for Windows along with Bonjour for Windows from Apple:</p>
 
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200204-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200211-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200219-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200219-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
       <li><a href="http://support.apple.com/kb/DL999">Bonjour for Windows (Required)</a></li>
     </ul>
 
@@ -93,14 +93,14 @@ cd "C:\Program Files\IPP Everywhere Printer Self-Certification Tools"
 
     <p>First download and extract the current self-certification tools for macOS:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200204-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200211-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200219-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200219-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
     </ul>
 
-    <p>Extract the PWG Raster files to the "sw-ippeveselfcert10-20200204" directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
+    <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
-cd <em>/path/to/sw-ippeveselfcert10-20200204</em>
+cd <em>/path/to/tools</em>
 ./bonjour-tests.sh "<em>Printer Name</em>"
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
@@ -119,14 +119,14 @@ cd <em>/path/to/sw-ippeveselfcert10-20200204</em>
 
     <p>First download and extract the current self-certification tools for RHEL:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200204-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200211-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200219-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200219-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
     </ul>
 
-    <p>Extract the PWG Raster files to the "sw-ippeveselfcert10-20200204" directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
+    <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
-cd <em>/path/to/sw-ippeveselfcert10-20200204</em>
+cd <em>/path/to/tools</em>
 ./bonjour-tests.sh "<em>Printer Name</em>"
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
@@ -145,14 +145,14 @@ cd <em>/path/to/sw-ippeveselfcert10-20200204</em>
 
     <p>First download and extract the current self-certification tools for Ubuntu:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200204-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200211-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200219-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20200219-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Beta 1</a></li>
     </ul>
 
-    <p>Extract the PWG Raster files to the "sw-ippeveselfcert10-20200204" directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
+    <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
-cd <em>/path/to/sw-ippeveselfcert10-20200204</em>
+cd <em>/path/to/tools</em>
 ./bonjour-tests.sh "<em>Printer Name</em>"
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
