--- a/ipp/index.html
+++ b/ipp/index.html
@@ -112,10 +112,10 @@ layout: bare
     (Interim Draft - Last Updated October 10, 2019)</p>
 
     <p>IPP Everywhere™ v1.1:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20200312.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20200326.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20200312-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated March 12, 2020 - IPP WG Last Call completed)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve11-20200326-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated March 26, 2020 - IPP WG Last Call completed)</p>
 
     <p>IPP Everywhere™ Printer Self-Certification Manual v1.1:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert11-20200312.pdf">Clean</a>
@@ -134,7 +134,13 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrans11-20200218-rev.pdf">Redlined</a>
     (Stable Draft - Last Updated February 18, 2020)</p>
 
-    <!-- <h3>Registration Drafts</h3> -->
+
+    <h3>Registration Drafts</h3>
+
+    <p>IPP System Service Discovery v1.0:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsysdisc10-20200326.pdf">Clean</a>
+    (Initial Draft - Last Updated March 26, 2020)</p>
+
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
