New system discovery draft.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -133,8 +133,8 @@ layout: bare
     <h3>Registration Drafts</h3>
 
     <p>IPP System Service Discovery v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsysdisc10-20200326.pdf">Clean</a>
-    (Initial Draft - Last Updated March 26, 2020)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsysdisc10-20200427.pdf">Clean</a>
+    (Stable Draft - Last Updated April 27, 2020)</p>
 
 
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
