New system discovery draft.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -134,6 +134,8 @@ layout: bare
 
     <p>IPP System Service Discovery v1.0:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsysdisc10-20200427.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsysdisc10-20200427-rev.pdf">Redlined</a>
     (Stable Draft - Last Updated April 27, 2020)</p>
 
 
