--- a/informational.html
+++ b/informational.html
@@ -25,7 +25,7 @@ layout: bare
       <h3>PWG 5199.10-2019: IPP Authentication Methods v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-ippauth10-20190816-5199.10.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/informational/bp-ippauth10-20190816-5199.10.docx">DOCX</a></h3>
       <p>This Best Practice document provides implementation guidance on how to best integrate various authentication mechanisms used over IPP's HTTP and HTTPS transports into IPP protocol exchanges when printer access or print feature policy requires authorization.</p>
 
-      <h3>PWG Safe G-Code Subset for 3D Printing v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.docx">DOCX</a></h3>
+      <h3>PWG 5199.7-2019: PWG Safe G-Code Subset for 3D Printing v1.0 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604-5199.7.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/informational/bp-pwgsafegcode10-20190604.docx">DOCX</a></h3>
       <p>This document defines a "safe" subset of G-code for use in 3D printing with IPP along with the capabilities and parameters needed to allow a client to generate G-code compatible with the printer.</p>
 
       <h3>PWG Mapping CIP4 JDF to PWG Job Ticket v1.0 (JDFMAP) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/informational/bp-smjdfmap10-20170828.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/informational/bp-smjdfmap10-20170828.docx">DOCX</a></h3>
