--- a/standards.html
+++ b/standards.html
@@ -86,8 +86,8 @@ layout: bare
     <p>Printing on new operating systems, distributed computing systems, and mobile devices emphasizes the challenges of generating document data, discovering available Printers, and communicating that document data to a Printer. This specification adds additional attributes and operations to IPP to better support generic, vendor-neutral implementations of printing in these environments.</p>
 
 
-    <h3>PWG 5100.14-2013: IPP Everywhere <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve10-20130128-5100.14.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve10-20130128-5100.14.docx">DOCX</a></h3>
-    <p>This standard defines an extension of IPP to support network printing without vendor-specific driver software, including the transport, various discovery protocols, and standard document formats.</p>
+    <h3>PWG 5100.14-2020: IPP Everywhere™ v1.1 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve11-20200515-5100.14.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve11-20200515-5100.14.docx">DOCX</a></h3>
+    <p>This specification defines an IPP profile that supports network printing without vendor-specific driver software, including the transport, various discovery protocols, and standard document formats.</p>
 
 
     <h3>PWG 5100.15-2014: IPP FaxOut Service <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippfaxout10-20140618-5100.15.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippfaxout10-20140618-5100.15.docx">DOCX</a></h3>
@@ -110,8 +110,8 @@ layout: bare
     <p>This document updates and extends &ldquo;Internet Printing Protocol/1.1: Implementor's Guide&rdquo; (RFC 3196) for all IPP protocol versions.</p>
 
 
-    <h3>PWG 5100.20-2016: IPP Everywhere Printer Self-Certification Manual v1.0 (SELFCERT) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert10-20160219-5100.20.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert10-20160219-5100.20.docx">DOCX</a></h3>
-    <p>This document defines IPP Everywhere Printer self-certification test procedures and the process required for PWG Members to register the test results on the PWG web site in order to use the &ldquo;IPP Everywhere&rdquo; logo.</p>
+    <h3>PWG 5100.20-2020: IPP Everywhere™ Printer Self-Certification Manual v1.1 (SELFCERT) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert11-20200515-5100.20.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert11-20200515-5100.20.docx">DOCX</a></h3>
+    <p>This document defines IPP Everywhere™ v1.1 Printer self-certification test procedures and the process required for PWG Members to register the test results on the PWG web site in order to use the "IPP Everywhere™" logo.</p>
 
 
     <h3>PWG 5100.21-2019: IPP 3D Printing Extensions v1.1 (3D) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.docx">DOCX</a></h3>
