--- a/ippeveselfcert/index.html
+++ b/ippeveselfcert/index.html
@@ -66,8 +66,8 @@ a.nav-link.active {
     <p>First download and install the current self-certification tools for Windows along with Bonjour for Windows from Apple:</p>
 
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200408-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20200522-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 1</a></li>
       <li><a href="http://support.apple.com/kb/DL999">Bonjour for Windows (Required)</a></li>
     </ul>
 
@@ -75,7 +75,8 @@ a.nav-link.active {
 
     <pre>
 cd "C:\Program Files\IPP Everywhere Printer Self-Certification Tools"
-.\bonjour-tests.bat "<em>Printer Name</em>"
+.\bonjour-tests.bat "<em>Printer Name</em>"  (v1.0 tools)
+.\dnssd-tests.bat "<em>Printer Name</em>"    (v1.1 tools)
 .\ipp-tests.bat "<em>Printer Name</em>"
 .\document-tests.bat "<em>Printer Name</em>"
 </pre>
@@ -93,15 +94,16 @@ cd "C:\Program Files\IPP Everywhere Printer Self-Certification Tools"
 
     <p>First download and extract the current self-certification tools for macOS:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200408-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20200521-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 1</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
+./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
@@ -119,15 +121,16 @@ cd <em>/path/to/tools</em>
 
     <p>First download and extract the current self-certification tools for RHEL:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200408-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20200521-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 1</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
+./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
@@ -145,15 +148,16 @@ cd <em>/path/to/tools</em>
 
     <p>First download and extract the current self-certification tools for Ubuntu:</p>
     <ul>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200408-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 4</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20200521-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert10-20200617-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 1</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
+./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
