--- a/printers/index.html
+++ b/printers/index.html
@@ -21,9 +21,9 @@ layout: bare
       <option value="Fuji Xerox"></option>-->
       <option value="HP"></option>
 <!--      <option value="Konica Minolta"></option>
-      <option value="Kyocera"></option>
+      <option value="Kyocera"></option>-->
       <option value="LaserJet"></option>
-      <option value="Lexmark"></option>-->
+      <option value="Lexmark"></option>
       <option value="OfficeJet"></option>
 <!--      <option value="Oki Data"></option>-->
       <option value="Photosmart"></option>
