--- a/ipp/index.html
+++ b/ipp/index.html
@@ -259,6 +259,7 @@ layout: bare
       <li>C:<ul>
         <li><a href="https://www.cups.org/">CUPS: Printing Software for Linux/UNIX</a></li>
         <li><a href="https://istopwg.github.io/ippsample">IPP Sample Code</a></li>
+        <li><a href="https://www.msweet.org/pappl/">PAPPL: Printer Application Framework</a></li>
       </ul></li>
 
       <li>Python:<ul>
