--- a/ipp/index.html
+++ b/ipp/index.html
@@ -92,6 +92,14 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="DRAFTS">Working Drafts</h2>
 
+    <h3>Organization Drafts</h3>
+
+    <p>IPP Workgroup Charter: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp-charter-20201009.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipp-charter-20201009-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated October 9, 2020)</p>
+
+
     <h3>Standards-Track Drafts</h3>
 
     <p>IPP Driverless Printing Extensions v2.0 (NODRIVER), updating PWG 5100.13-2012: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippnodriver20-20200204.pdf">Clean</a>
