--- a/ippeveselfcert/index.html
+++ b/ippeveselfcert/index.html
@@ -36,9 +36,11 @@ a.nav-link.active {
   <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
     <h2>About the IPP Everywhere&trade; Printer Self-Certification Tools</h2>
 
-    <p>The IPP Everywhere&trade; Printer self-certification tools are used to test the conformance of printers to <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve10-20130128-5100.14.pdf" target="_blank">PWG Candidate Standard 5100.14-2013: IPP Everywhere&trade;</a>. The testing and submission procedures are defined in <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert10-20160219-5100.20.pdf" target="_blank">PWG Candidate Standard 5100.20-2016: IPP Everywhere&trade; v1.0 Printer Self-Certification Manual.</a></p>
+    <p>The IPP Everywhere&trade; Printer self-certification tools are used to test the conformance of printers to <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve11-20200515-5100.14.pdf" target="_blank">PWG Candidate Standard 5100.14-2020: IPP Everywhere&trade; v1.1</a>. The testing and submission procedures are defined in <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert11-20200515-5100.20.pdf" target="_blank">PWG Candidate Standard 5100.20-2020: IPP Everywhere&trade; v1.1 Printer Self-Certification Manual.</a></p>
 
     <blockquote>Note: Tests are intended to be run on an isolated network, or at least when no other users are printing using the target printer. Otherwise the test scripts will fail randomly.</blockquote>
+
+    <blockquote>Note: The IPP Everywhere v1.0 printer self-certification tools can still be used for certifications until June 30, 2021. All certifications after that date must use the IPP Everywhere v1.1 printer self-certification tools.</blockquote>
 
 
     <h2>Support</h2>
@@ -67,7 +69,7 @@ a.nav-link.active {
 
     <ul>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200617-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20201007-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20201007-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
       <li><a href="http://support.apple.com/kb/DL999">Bonjour for Windows (Required)</a></li>
     </ul>
 
@@ -94,16 +96,16 @@ cd "C:\Program Files\IPP Everywhere Printer Self-Certification Tools"
 
     <p>First download and extract the current self-certification tools for macOS:</p>
     <ul>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20201007-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200617-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20201007-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
@@ -121,16 +123,16 @@ cd <em>/path/to/tools</em>
 
     <p>First download and extract the current self-certification tools for RHEL:</p>
     <ul>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20201007-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200617-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20201007-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
@@ -148,16 +150,16 @@ cd <em>/path/to/tools</em>
 
     <p>First download and extract the current self-certification tools for Ubuntu:</p>
     <ul>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20201007-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert10-20200617-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.0 Update 5</a></li>
-      <li><a href="https://ftp.pwg.org/pub/pwg/ipp/wd/sw-ippeveselfcert11-20201007-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 2</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
 
     <pre>
 cd <em>/path/to/tools</em>
-./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./dnssd-tests.sh "<em>Printer Name</em>"    (v1.1 tools)
+./bonjour-tests.sh "<em>Printer Name</em>"  (v1.0 tools)
 ./ipp-tests.sh "<em>Printer Name</em>"
 ./document-tests.sh "<em>Printer Name</em>"
 </pre>
