--- a/ipp/index.html
+++ b/ipp/index.html
@@ -137,9 +137,12 @@ layout: bare
     <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
 
     <p>Job Accounting with IPP v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20200827.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20201113.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20200827-rev.pdf">Redlined</a> (Stable Draft - Last Updated August 27, 2020)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20201113-rev.pdf">Redlined</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-ippaccounting10.txt">Last Call Comments</a>
+    (LCRC Draft - Last Updated November 13, 2020)</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
