--- a/ipp/index.html
+++ b/ipp/index.html
@@ -119,11 +119,11 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20201029-rev.pdf">Redlined</a>
     (Interim Draft - Last Updated October 29, 2020)</p>
 
-    <p>IPP Finishings v2.2 (FIN), updating PWG 5100.1-2017:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings22-20210108.pdf">Clean</a>
+    <p>IPP Finishings v3.0 (FIN), updating PWG 5100.1-2017:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20210223.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings22-20210108-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated January 8, 2021)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20210223-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated February 23, 2021)</p>
 
     <p>IPP Production Printing Extensions v2.0 (PPX), updating PWG 5100.3-2001:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx20-20201029.pdf">Clean</a>
@@ -138,17 +138,13 @@ layout: bare
     (Initial Draft - Last Updated February 11, 2021)</p>
 
 
-    <!--<h3>Registration Drafts</h3>-->
+    <h3>Registration Drafts</h3>
 
-    <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
+    <p>IPP Storage Extensions v1.0:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippstorage10-20210129.pdf">Clean</a>
+    (Initial Draft - Last Updated January 29, 2021)</p>
 
-    <p>Job Accounting with IPP v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20201120.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippaccounting10-20201120-rev.pdf">Redlined</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-ippaccounting10.txt">Last Call Comments</a>
-    (LCRC Draft - Last Updated November 20, 2020)</p>
+    <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
@@ -254,6 +250,8 @@ layout: bare
     <p><a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/bp-ippmptray10-20180124.pdf">Supporting Multi-Purpose Trays</a> (January 24, 2018)</p>
 
     <p><a href="https://ftp.pwg.org/pub/pwg/informational/bp-ippauth10-20190816-5199.10.pdf">PWG 5199-2019.10: IPP Authentication Methods v1.0</a></p>
+
+    <p><a href="https://ftp.pwg.org/pub/pwg/informational/bp-ippaccounting10-20210205-5199.11.pdf">PWG 5199.11-2021: Job Accounting with IPP v1.0</a></p>
 
     <!-- <h3>White Papers</h3> -->
   </div>
