--- a/ipp/index.html
+++ b/ipp/index.html
@@ -133,8 +133,10 @@ layout: bare
     <h3>Registration Drafts</h3>
 
     <p>Deprecating IPP Print by Reference v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdepuri10-20210619.pdf">Clean</a>
-    (Initial Draft - Last Updated June 19, 2021)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdepuri10-20210909.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdepuri10-20210909-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated September 9, 2021)</p>
 
     <p>IPP Storage Extensions v1.0:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippstorage10-20210129.pdf">Clean</a>
