--- a/ipp/index.html
+++ b/ipp/index.html
@@ -111,6 +111,12 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20210922-rev.pdf">Redlined</a>
     (Prototype Draft - Last Updated September 22, 2021)</p>
 
+    <p>IPP Everywhere v2.0 (EVE), updating PWG 5100.14-2020:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve20-20211021.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve20-20211021-rev.pdf">Redlined</a>
+    (Initial Draft - Last Updated October 21, 2021)</p>
+    
     <p>IPP Finishings v3.0 (FIN), updating PWG 5100.1-2017:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20211007.pdf">Clean</a>
     &middot;
