--- a/ipp/index.html
+++ b/ipp/index.html
@@ -94,16 +94,16 @@ layout: bare
 
     <h3>Standards-Track Drafts</h3>
 
-    <p>IPP Driverless Printing Extensions v2.0 (NODRIVER), updating PWG 5100.13-2012: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippnodriver20-20210501.pdf">Clean</a>
+    <p>IPP Driverless Printing Extensions v2.0 (NODRIVER), updating PWG 5100.13-2012: <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippnodriver20-20211102.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippnodriver20-20210501-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated May 1, 2021)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippnodriver20-20211102-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated November 2, 2021)</p>
 
     <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20210428.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20210519.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20210428-rev.pdf">Redlined</a>
-    (Prototype Draft - Last Updated April 28, 2021)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20210519-rev.pdf">Redlined</a>
+    (Prototype Draft - Last Updated May 19, 2021)</p>
 
     <p>IPP Enterprise Printing Extensions v2.0 (EPX), updating PWG 5100.11-2010:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20211101.pdf">Clean</a>
@@ -118,10 +118,10 @@ layout: bare
     (Initial Draft - Last Updated October 21, 2021)</p>
 
     <p>IPP Finishings v3.0 (FIN), updating PWG 5100.1-2017:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20211007.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20211119.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20211007-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated October 7, 2021)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfinishings30-20211119-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated November 19, 2021)</p>
 
     <p>IPP Production Printing Extensions v2.0 (PPX), updating PWG 5100.3-2001:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippppx20-20211020.pdf">Clean</a>
@@ -137,12 +137,6 @@ layout: bare
 
 
     <h3>Registration Drafts</h3>
-
-    <p>Deprecating IPP Print by Reference v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdepuri10-20211020.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdepuri10-20211020-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated October 20, 2021)</p>
 
     <p>IPP Storage Extensions v1.0:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippstorage10-20210129.pdf">Clean</a>
@@ -233,7 +227,8 @@ layout: bare
 
     <h3>IPP Registration Documents <a class="badge badge-primary badge-pill" href="#" id="registrations" role="button" data-toggle="popover" data-container="body" data-content="An IPP Registration is a document that defines new IPP attributes, values, or operations and has been approved by the Internet Printing Protocol workgroup.">i</a></h3>
 
-    <p><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippgupa-20171214.pdf">IPP Get-User-Printer-Attributes</a>
+    <p><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippdepuri10-20211215.pdf">Deprecating IPP Print by Reference v1.0</a>
+    <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippgupa-20171214.pdf">IPP Get-User-Printer-Attributes</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/whitepaper/wp-job-password-repertoire-20160101.pdf">IPP Job Password Repertoire</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ipplabel10-20200213.pdf">IPP Label Printing Extensions v1.0</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ipppreset-20171214.pdf">IPP Presets</a>
