--- a/printers/index.html
+++ b/printers/index.html
@@ -16,16 +16,16 @@ layout: bare
 <!--      <option value="Brother"></option>-->
       <option value="Canon"></option>
       <option value="DCC"></option>
-<!--      <option value="EPSON"></option>
-      <option value="Fuji Xerox"></option>-->
+<!--      <option value="EPSON"></option>-->
+<!--      <option value="Fuji Xerox"></option>-->
       <option value="HP"></option>
-<!--      <option value="Konica Minolta"></option>
-      <option value="Kyocera"></option>-->
+<!--      <option value="Konica Minolta"></option>-->
+<!--      <option value="Kyocera"></option>-->
       <option value="Lexmark"></option>
       <option value="OKI"></option>
-<!--      <option value="Ricoh"></option>
-      <option value="Toshiba"></option>
-      <option value="Xerox"></option>-->
+      <option value="Ricoh"></option>
+<!--      <option value="Toshiba"></option>-->
+<!--      <option value="Xerox"></option>-->
     </datalist>
     <select name="media" onChange="update();">
       <option value="">All Sizes</option>
