--- a/standards.html
+++ b/standards.html
@@ -81,8 +81,8 @@ layout: bare
     <p>This specification defines the IPP 2.0, 2.1, and 2.2 protocol versions. Each version defines a minimum set of supported IPP extensions to simplify development and interoperability of IPP Client and Printer implementations.</p>
 
 
-    <h3>PWG 5100.13-2012: IPP Job and Printer Extensions - Set 3 (JPS3) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobprinterext3v10-20120727-5100.13.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobprinterext3v10-20120727-5100.13.docx">DOCX</a></h3>
-    <p>Printing on new operating systems, distributed computing systems, and mobile devices emphasizes the challenges of generating document data, discovering available Printers, and communicating that document data to a Printer. This specification adds additional attributes and operations to IPP to better support generic, vendor-neutral implementations of printing in these environments.</p>
+    <h3>PWG 5100.13-2023: IPP Driver Replacement Extensions v2.0 (NODRIVER) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippnodriver20-20230301-5100.13.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippnodriver20-20230301-5100.13.docx">DOCX</a></h3>
+    <p>This specification defines new attributes, values, and operations to support features, capabilities, localization, and status information that traditionally could only be provided by vendor- or model-specific drivers.</p>
 
 
     <h3>PWG 5100.14-2020: IPP Everywhere™ v1.1 <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve11-20200515-5100.14.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeve11-20200515-5100.14.docx">DOCX</a></h3>
