Initial OAUTH draft.

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -129,7 +129,12 @@ layout: bare
 
     <!--<h3>Registration Drafts</h3>-->
 
-    <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
+    <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
+
+    <p>Using OAuth with IPP v1.0:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20230310.pdf">Clean</a>
+    (Initial Draft - Last Updated March 10, 2023)</p>
+
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-2">
