--- a/ipp/index.html
+++ b/ipp/index.html
@@ -133,10 +133,10 @@ layout: bare
     (Interim Draft - Last Updated August 9, 2022)</p>
 
     <p>PWG Media Standardized Names v2.1 (MSN), updating PWG 5101.1-2013:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmsn21-20230428.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmsn21-20230603.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmsn21-20230428-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated April 28, 2023)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwgmsn21-20230603-rev.pdf">Redlined</a>
+    (Prototype Draft - Last Updated June 3, 2023)</p>
 
     <!--<h3>Registration Drafts</h3>-->
 
