--- a/standards.html
+++ b/standards.html
@@ -124,7 +124,7 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="s5101">PWG 5101.x: Registrations</h2>
 
-    <h3>PWG 5101.1-2013: PWG Media Standardized Names 2.0 (MSN2) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmsn20-20130328-5101.1.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmsn20-20130328-5101.1.docx">DOCX</a></h3>
+    <h3>PWG 5101.1-2023: PWG Media Standardized Names v2.1 (MSN) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmsn21-20230915-5101.1.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-pwgmsn21-20230915-5101.1.docx">DOCX</a></h3>
     <p>This document defines standard colorant and media names and naming conventions to be used by other PWG specifications. These lists of names are a superset of the names that are defined in the Printer MIB [RFC3805] and various Internet Printing Protocol documents.</p>
 
 
