--- a/ipp/index.html
+++ b/ipp/index.html
@@ -101,12 +101,12 @@ layout: bare
     (Prototype Draft - Last Updated May 19, 2021)</p>
 
     <p>IPP Enterprise Printing Extensions v2.0 (EPX), updating PWG 5100.11-2010:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20231017.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20240102.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20231017-rev.pdf">Redlined</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippepx20-20240102-rev.pdf">Redlined</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwg5100.11-abnf-20230206.txt">ABNF</a>
-    (Prototype Draft - Last Updated October 17, 2023)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-pwg5100.11-abnf-20240102.txt">ABNF</a>
+    (Stable Draft - PWG Last Call Ends February 2, 2024 - Last Updated January 2, 2024)</p>
 
     <p>IPP Everywhere v2.0 (EVE), updating PWG 5100.14-2020:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeve20-20221107.pdf">Clean</a>
@@ -132,7 +132,13 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20220809-rev.pdf">Redlined</a>
     (Interim Draft - Last Updated August 9, 2022)</p>
 
-    <!--<h3>Registration Drafts</h3>-->
+    <h3>Registration Drafts</h3>
+
+    <p>IPP Wi-Fi Configuration Extensions v1.0 (WIFI):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240102.pdf">Clean</a>
+    <!--&middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240102-rev.pdf">Redlined</a>-->
+    (Initial Draft - Last Updated January 2, 2024)</p>
 
     <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
 
